# naopc

./: .gitignore  LICENSE  Makefile  README.md  bound_approximation_methods.py  calculate_feature_attribution_scores.py  calculate_optimal_scores.py  calculate_permutations.py  compute_approximate_bounds.py  compute_approximate_bounds_subsets.py  compute_feature_interactions.py  create_dataset.py  dataset.py  evaluate_approximation_algorithms.py  evaluate_best_orders.py  evaluate_feature_attributions.py  feature_attribution_methods.py  plot_bound_deltas.py  plot_deltas_for_bounds.py  pyproject.toml  submit_imdb_long.sh  submit_sst2_long.sh  submit_sst2_short.sh  submit_yelp_long.sh  submit_yelp_short.sh  yelp_polarity_test_small.csv
archipelago/: explainer.py  text_utils.py
data/: imdb_test_long.csv  sst2_test_long.csv  sst2_test_short.csv  yelp_test_long.csv  yelp_test_short.csv
decompx/: bert.py  roberta.py
feature_interactions/: interaction_regression.py
notebooks/: normalization_before_after.ipynb
reports/: compare_explanations_table.py  compare_increasing_beam_sizes.py  correlation_table.py  data_statistics.py  long_correlation_table.py  plot_aopc_limits.py  plot_distributions.py  ranking_plot.py  ranking_plot_long.py  ranking_plot_short.py  short_correlation_table.py
results/: yelp_best_scores_bert-base-uncased-imdb.parquet  yelp_best_scores_bert-base-uncased-yelp-polarity.parquet  yelp_best_scores_roberta-base-finetuned-yelp-polarity.parquet  yelp_best_scores_roberta-base-imdb.parquet  yelp_best_scores_robust-bert-yelp.parquet  (+15 more)
utils/: tokenizer.py
(+488 files in other folders)
