[tool.poetry]
name = "faithfulness"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
transformers = "^4.41.2"
datasets = "^2.20.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
rich = "^13.7.1"
numba = "^0.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
