[tool.poetry]
name = "faithfulness"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    {include="src"}
]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.4"
transformers = "^4.41.2"
datasets = "^2.20.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
numba = "^0.60.0"
captum = "^0.7.0"
scikit-learn = "^1.5.0"
numpy = "^2.0.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
ipython = "8.25.0"
ipykernel = "^6.29.4"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
